--- a/app/src/main/res/layout/fragment_einstellungen.xml
+++ b/app/src/main/res/layout/fragment_einstellungen.xml
@@ -6,55 +6,49 @@
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:id="@+id/einstelllungText"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="20dp"
-        android:gravity="center_horizontal"
+        android:gravity="center|top"
         android:text="@string/einstellungen"
-        android:textSize="25sp"
-        android:textColor="@color/schwoaz"/>
+        android:textColor="@color/schwoaz"
+        android:textSize="25sp" />
 
     <Button
         android:id="@+id/Grundeinstellungen"
-        android:layout_width="360dp"
-        android:layout_marginLeft="15dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_marginTop="130dp"
         android:text="@string/grundeinstellungen"
-        android:textColor="@color/schwoaz"
-        android:layout_marginStart="15dp" />
+        android:textColor="@color/schwoaz" />
 
     <Button
         android:id="@+id/Benachrichtigung"
-        android:layout_width="360dp"
-        android:layout_marginLeft="15dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_marginTop="215dp"
         android:text="@string/Benachrichtigung"
-        android:textColor="@color/schwoaz"
-        android:layout_marginStart="15dp" />
+        android:textColor="@color/schwoaz" />
 
-
-    <Button
-        android:id="@+id/löschen"
-        android:layout_width="360dp"
-        android:layout_marginLeft="15dp"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="500dp"
-        android:text="@string/löschen"
-        android:textColor="#ff0000"
-        android:layout_marginStart="15dp"
-        android:onClick="OnClickDelete"/>
 
     <Button
         android:id="@+id/PWAendern"
-        android:layout_width="360dp"
-        android:layout_marginLeft="15dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center"
         android:layout_marginTop="300dp"
         android:text="@string/passwort_ndern"
-        android:textColor="@color/schwoaz"
-        android:layout_marginStart="15dp" />
+        android:textColor="@color/schwoaz" />
+
+    <Button
+        android:id="@+id/loeschen"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="bottom|center"
+        android:layout_marginTop="400dp"
+        android:text="@string/löschen"
+        android:textColor="#ff0000" />
 
 </FrameLayout>
