--- a/app/src/main/res/layout/content_main_menue.xml
+++ b/app/src/main/res/layout/content_main_menue.xml
@@ -18,6 +18,7 @@
         android:layout_marginTop="30dp" />
 
     <TextView
+        android:id="@+id/textMl"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="300dp"
@@ -28,6 +29,7 @@
         android:textSize="32sp" />
 
     <EditText
+        android:id="@+id/editWater"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
@@ -44,7 +46,8 @@
         android:layout_marginTop="240dp"
         android:text="@string/addWater"
         android:textColor="@color/schwoaz"
-        android:textSize="20sp" />
+        android:textSize="20sp"
+        android:onClick="OnClickVisible"/>
 
     <Switch
         android:id="@+id/simpleSwitch"
@@ -65,6 +68,7 @@
         tools:targetApi="lollipop" />
 
     <Button
+        android:id="@+id/haeckchen"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
