--- a/app/src/main/res/layout/fragment_pwaendern.xml
+++ b/app/src/main/res/layout/fragment_pwaendern.xml
@@ -75,11 +75,9 @@
 
 
     <Button
-        android:layout_width="380dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginStart="15dp"
-        android:layout_marginTop="500dp"
+        android:layout_marginTop="450dp"
         android:text="@string/speichern"
         android:textColor="@color/schwoaz" />
 
