--- a/app/src/main/res/layout/nav_header_main_menue.xml
+++ b/app/src/main/res/layout/nav_header_main_menue.xml
@@ -17,7 +17,7 @@
         android:layout_height="wrap_content"
         android:contentDescription="@string/rundes_icon"
         android:paddingTop="@dimen/nav_header_vertical_spacing"
-        app:srcCompat="@mipmap/ic_launcher_round" />
+        app:srcCompat="@mipmap/ic_launcher_tran" />
 
     <TextView
         android:layout_width="match_parent"
