--- a/app/src/main/res/layout/fragment_benachrichtigungseinstellungen.xml
+++ b/app/src/main/res/layout/fragment_benachrichtigungseinstellungen.xml
@@ -25,6 +25,7 @@
         android:textSize="20sp" />
 
     <Switch
+        android:id="@+id/simpleSwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="8dp"
