--- a/app/src/main/res/layout/fragment_loeschen.xml
+++ b/app/src/main/res/layout/fragment_loeschen.xml
@@ -51,8 +51,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:onClick="onClickDelete"
-            android:text="loeschen"
+            android:text="@string/loeschen"
             android:textColor="@color/schwoaz"
             android:textSize="20sp" />
 
