--- a/app/src/main/res/layout/fragment_pwaendern.xml
+++ b/app/src/main/res/layout/fragment_pwaendern.xml
@@ -22,16 +22,39 @@
         android:layout_marginLeft="15dp"
         android:layout_marginStart="15dp"
         android:layout_marginTop="130dp"
+        android:text="@string/prompt_email"
+        android:textColor="@color/schwoaz"
+        android:textSize="20sp" />
+
+    <EditText
+        android:id="@+id/email_update"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="20dp"
+        android:layout_marginLeft="100dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginStart="100dp"
+        android:layout_marginTop="130dp"
+        android:hint="@string/eingabe_email"
+        android:inputType="textEmailAddress"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="15dp"
+        android:layout_marginStart="15dp"
+        android:layout_marginTop="215dp"
         android:text="@string/altes_passwort"
         android:textColor="@color/schwoaz"
         android:textSize="20sp" />
 
     <EditText
+        android:id="@+id/oldPw_update"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="160dp"
         android:layout_marginStart="160dp"
-        android:layout_marginTop="130dp"
+        android:layout_marginTop="215dp"
         android:inputType="textPassword"
         tools:ignore="LabelFor" />
 
@@ -40,17 +63,18 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="215dp"
+        android:layout_marginTop="300dp"
         android:text="@string/neues_passwort"
         android:textColor="@color/schwoaz"
         android:textSize="20sp" />
 
     <EditText
+        android:id="@+id/newPw_update"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="170dp"
         android:layout_marginStart="170dp"
-        android:layout_marginTop="215dp"
+        android:layout_marginTop="300dp"
         android:inputType="textPassword"
         tools:ignore="LabelFor" />
 
@@ -59,22 +83,24 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="15dp"
         android:layout_marginStart="15dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="385dp"
         android:text="@string/passwort_best_tigen"
         android:textColor="@color/schwoaz"
         android:textSize="20sp" />
 
     <EditText
+        android:id="@+id/newPw_conform"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="205dp"
         android:layout_marginStart="205dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="385dp"
         android:inputType="textPassword"
         tools:ignore="LabelFor" />
 
 
     <Button
+        android:id="@+id/pwSpeichernButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="450dp"
