Anzeige wasserbedarf + eintragen funktioniert! Datenbank fehlt!

--- a/app/src/main/res/layout/content_main_menue.xml
+++ b/app/src/main/res/layout/content_main_menue.xml
@@ -9,6 +9,14 @@
     tools:context="com.example.nathalieseibert.wells.MainMenueActivity"
     tools:showIn="@layout/app_bar_main_menue">
 
+    <TextView
+        android:id="@+id/titele"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="10dp"
+        android:textColor="@color/schwoaz"
+        android:textSize="27sp" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -16,12 +24,23 @@
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="55dp"
         android:background="@drawable/circle_shape"
         android:indeterminate="false"
         android:max="100"
         android:progress="0"
         android:progressDrawable="@drawable/circular_progress_bar" />
+
+
+    <TextView
+        android:id="@+id/textProzent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="155dp"
+        android:text="@string/prozent"
+        android:textColor="@color/schwoaz"
+        android:textSize="32sp" />
 
     <TextView
         android:id="@+id/textMl"
