--- a/app/src/main/res/layout/content_main_menue.xml
+++ b/app/src/main/res/layout/content_main_menue.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.nathalieseibert.wells.MainMenueActivity"
     tools:showIn="@layout/app_bar_main_menue">
 
@@ -17,6 +15,7 @@
         android:layout_marginTop="10dp"
         android:textColor="@color/schwoaz"
         android:textSize="27sp" />
+
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -91,13 +90,27 @@
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="465dp"
-        android:text="@string/aktivit_t"
-        android:switchMinWidth="200dp"
-        android:switchTextAppearance="@style/MyStyle"
         android:checked="false"
-        android:textOn="@string/ja"
-        android:textOff="@string/nein"
         android:showText="true"
+        android:switchMinWidth="100dp"
+        android:switchTextAppearance="@style/MyStyle"
+        android:text="@string/aktivit_t"
+        android:textOff="@string/nein"
+        android:textOn="@string/ja"
         tools:ignore="UnusedAttribute" />
+
+
+    <TextView
+        android:id="@+id/myTemp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginEnd="13dp"
+        android:layout_alignParentRight="true"
+        android:layout_marginRight="13dp"
+        android:textColor="@color/schwoaz"
+        android:textSize="27sp"
+        />
 
 </RelativeLayout>
