--- a/app/src/main/res/layout/content_main_menue.xml
+++ b/app/src/main/res/layout/content_main_menue.xml
@@ -7,12 +7,13 @@
     tools:context="com.example.nathalieseibert.wells.MainMenueActivity"
     tools:showIn="@layout/app_bar_main_menue">
 
+
     <TextView
         android:id="@+id/titele"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="60dp"
         android:textColor="@color/schwoaz"
         android:textSize="27sp" />
 
@@ -23,7 +24,7 @@
         android:layout_width="250dp"
         android:layout_height="250dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="55dp"
+        android:layout_marginTop="100dp"
         android:background="@drawable/circle_shape"
         android:indeterminate="false"
         android:max="100"
@@ -36,7 +37,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="155dp"
+        android:layout_marginTop="200dp"
         android:text="@string/prozent"
         android:textColor="@color/schwoaz"
         android:textSize="32sp" />
@@ -47,7 +48,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="245dp"
         android:layout_marginStart="245dp"
-        android:layout_marginTop="350dp"
+        android:layout_marginTop="400dp"
         android:text="@string/textMl"
         android:textColor="@color/schwoaz"
         android:textSize="32sp" />
@@ -58,7 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="120dp"
         android:layout_marginStart="120dp"
-        android:layout_marginTop="350dp"
+        android:layout_marginTop="400dp"
         android:ems="5"
         android:inputType="number"
         tools:ignore="LabelFor" />
@@ -68,7 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="350dp"
         android:text="@string/addWater"
         android:textColor="@color/schwoaz"
         android:textSize="20sp" />
@@ -79,17 +80,17 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="400dp"
+        android:layout_marginTop="450dp"
         android:text="@string/haeckchen"
 
-        /><!-- text to be displayed whenever current state is checked-->
+        />
 
     <Switch
         android:id="@+id/mySwitch"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="465dp"
+        android:layout_marginTop="520dp"
         android:checked="false"
         android:showText="true"
         android:switchMinWidth="100dp"
@@ -97,6 +98,7 @@
         android:text="@string/aktivit_t"
         android:textOff="@string/nein"
         android:textOn="@string/ja"
+        android:textSize="20sp"
         tools:ignore="UnusedAttribute" />
 
 
@@ -106,11 +108,10 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:layout_marginEnd="13dp"
         android:layout_alignParentRight="true"
+        android:layout_marginEnd="13dp"
         android:layout_marginRight="13dp"
         android:textColor="@color/schwoaz"
-        android:textSize="27sp"
-        />
+        android:textSize="27sp" />
 
 </RelativeLayout>
