--- a/app/src/main/res/layout/fragment_karte.xml
+++ b/app/src/main/res/layout/fragment_karte.xml
@@ -7,19 +7,18 @@
     tools:context="com.example.nathalieseibert.wells.Karte">
 
 
-        <com.google.android.gms.maps.MapView
-            android:id="@+id/mapView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-             />
+    <com.google.android.gms.maps.MapView
+        android:id="@+id/mapView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
 
-        <Button
-            android:id="@+id/liste"
-            android:layout_width="180dp"
-            android:layout_height="wrap_content"
-            android:text="@string/liste"
-            android:layout_gravity="bottom|start" />
+    <Button
+        android:id="@+id/liste"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:text="@string/liste" />
 
 
 </FrameLayout>
