--- a/app/src/main/res/layout/fragment_trinkbrunnen.xml
+++ b/app/src/main/res/layout/fragment_trinkbrunnen.xml
@@ -26,6 +26,7 @@
 
 
     <ListView
+        android:id="@+id/brunnenview"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
         android:layout_marginBottom="60dp"
