--- a/app/src/main/res/layout/content_main_menue.xml
+++ b/app/src/main/res/layout/content_main_menue.xml
@@ -61,6 +61,8 @@
         android:layout_marginStart="120dp"
         android:layout_marginTop="400dp"
         android:ems="5"
+        android:imeOptions="actionDone"
+        android:maxLength="4"
         android:inputType="number"
         tools:ignore="LabelFor" />
 
