--- a/app/src/main/res/layout/fragment_karte.xml
+++ b/app/src/main/res/layout/fragment_karte.xml
@@ -12,13 +12,22 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
+    <Button
+        android:id="@+id/buttonkarte"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:enabled="false"
+        android:text="@string/title_Karte" />
 
     <Button
         android:id="@+id/liste"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
-        android:layout_gravity="bottom|start"
+        android:layout_gravity="bottom|end"
         android:text="@string/liste" />
+
+
 
 
 </FrameLayout>
