--- a/app/src/main/res/layout/fragment_trinkbrunnen.xml
+++ b/app/src/main/res/layout/fragment_trinkbrunnen.xml
@@ -13,9 +13,7 @@
         android:gravity="center_horizontal"
         android:text="@string/title_brunnenliste"
         android:textColor="@color/schwoaz"
-        android:textSize="25sp"
-
-        />
+        android:textSize="25sp" />
 
     <Button
         android:id="@+id/buttonkarte"
@@ -24,6 +22,13 @@
         android:layout_gravity="bottom|start"
         android:text="@string/title_Karte" />
 
+    <Button
+        android:id="@+id/buttontrinkbrunnen"
+        android:layout_width="180dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|end"
+        android:enabled="false"
+        android:text="@string/liste" />
 
     <ListView
         android:layout_width="fill_parent"
