--- a/app/src/main/res/layout/fragment_benachrichtigungseinstellungen.xml
+++ b/app/src/main/res/layout/fragment_benachrichtigungseinstellungen.xml
@@ -12,7 +12,7 @@
 
         <TextView
             android:id="@+id/textView3"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginEnd="20dp"
             android:layout_marginLeft="20dp"
