--- a/app/src/main/res/layout/fragment_grund_einstellung.xml
+++ b/app/src/main/res/layout/fragment_grund_einstellung.xml
@@ -7,8 +7,8 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="65dp"
         android:gravity="center_horizontal"
         android:text="@string/grundeinstellungen"
         android:textColor="@color/schwoaz"
@@ -111,7 +111,12 @@
         android:id="@+id/button_update"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="450dp"
+        android:layout_marginEnd="20dp"
+        android:layout_gravity="bottom"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginBottom="20dp"
         android:text="@string/speichern"
         android:textColor="@color/schwoaz" />
 
