--- a/app/src/main/res/layout/fragment_pwaendern.xml
+++ b/app/src/main/res/layout/fragment_pwaendern.xml
@@ -7,8 +7,8 @@
     <!-- TODO: Update blank fragment layout -->
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="65dp"
         android:gravity="center_horizontal"
         android:text="@string/passwort_ndern"
         android:textColor="@color/schwoaz"
@@ -19,8 +19,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginStart="15dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="130dp"
         android:text="@string/prompt_email"
         android:textColor="@color/schwoaz"
@@ -31,18 +31,17 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginEnd="20dp"
-        android:layout_marginLeft="100dp"
+        android:layout_marginLeft="80dp"
         android:layout_marginRight="20dp"
-        android:layout_marginStart="100dp"
+        android:layout_marginStart="80dp"
         android:layout_marginTop="130dp"
-        android:hint="@string/eingabe_email"
         android:inputType="textEmailAddress" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginStart="15dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="215dp"
         android:text="@string/altes_passwort"
         android:textColor="@color/schwoaz"
@@ -54,6 +53,8 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="160dp"
         android:layout_marginStart="160dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
         android:layout_marginTop="215dp"
         android:inputType="textPassword"
         tools:ignore="LabelFor" />
@@ -61,8 +62,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginStart="15dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="300dp"
         android:text="@string/neues_passwort"
         android:textColor="@color/schwoaz"
@@ -73,6 +74,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginLeft="170dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
         android:layout_marginStart="170dp"
         android:layout_marginTop="300dp"
         android:inputType="textPassword"
@@ -81,8 +84,8 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="15dp"
-        android:layout_marginStart="15dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="385dp"
         android:text="@string/passwort_best_tigen"
         android:textColor="@color/schwoaz"
@@ -92,20 +95,28 @@
         android:id="@+id/newPw_conform"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="205dp"
-        android:layout_marginStart="205dp"
+        android:layout_marginStart="210dp"
         android:layout_marginTop="385dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
         android:inputType="textPassword"
-        tools:ignore="LabelFor" />
+        tools:ignore="LabelFor"
+        android:layout_marginLeft="210dp" />
 
 
     <Button
         android:id="@+id/pwSpeichernButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_gravity="bottom"
         android:layout_marginTop="450dp"
         android:text="@string/speichern"
-        android:textColor="@color/schwoaz" />
+        android:textColor="@color/schwoaz"
+        android:layout_marginLeft="20dp" />
 
 
 </FrameLayout>
