--- a/app/src/main/res/layout/fragment_verlauf2.xml
+++ b/app/src/main/res/layout/fragment_verlauf2.xml
@@ -8,33 +8,36 @@
 
     <TextView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="20dp"
-        android:gravity="center|top"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="65dp"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
         android:text="@string/title_Verlauf"
         android:textColor="@color/schwoaz"
         android:textSize="25sp" />
 
     <Button
-        android:id="@+id/buttonlist"
-        android:layout_width="180dp"
+        android:id="@+id/verlauf"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_width="160dp"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp"
         android:layout_gravity="bottom|start"
         android:enabled="false"
         android:text="@string/title_Verlauf" />
 
     <Button
-        android:id="@+id/buttonkarte"
-        android:layout_width="180dp"
+        android:id="@+id/statistik"
+        android:layout_width="160dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginRight="20dp"
         android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
+        android:layout_marginBottom="20dp"
         android:text="@string/title_Statistik" />
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="fill_parent"
-        android:layout_marginBottom="60dp"
-        android:layout_marginTop="60dp" />
+
 
 
 </FrameLayout>
