--- a/app/src/main/res/layout/fragment_karte.xml
+++ b/app/src/main/res/layout/fragment_karte.xml
@@ -17,6 +17,9 @@
         android:id="@+id/liste"
         android:layout_width="180dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginBottom="20dp"
         android:layout_gravity="bottom|start"
         android:text="@string/liste" />
 
