--- a/app/src/main/res/layout/content_main_menue.xml
+++ b/app/src/main/res/layout/content_main_menue.xml
@@ -4,7 +4,7 @@
     android:id="@+id/mainLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.nathalieseibert.wells.MainMenueActivity"
+    tools:context="at.fhjoanneum.gruppeWells.wells.MainMenueActivity"
     tools:showIn="@layout/app_bar_main_menue">
 
 
