--- a/app/src/main/res/layout/fragment_benachrichtigungseinstellungen.xml
+++ b/app/src/main/res/layout/fragment_benachrichtigungseinstellungen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.nathalieseibert.wells.Benachrichtigungseinstellungen">
+    tools:context="at.fhjoanneum.gruppeWells.wells.Benachrichtigungseinstellungen">
 
     <android.support.constraint.ConstraintLayout
         android:layout_width="match_parent"
