--- a/app/src/main/res/layout/fragment_einstellungen.xml
+++ b/app/src/main/res/layout/fragment_einstellungen.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.nathalieseibert.wells.Einstellungen">
+    tools:context="at.fhjoanneum.gruppeWells.wells.Einstellungen">
 
     <!-- TODO: Update blank fragment layout -->
     <TextView
