--- a/app/src/main/res/layout/fragment_grund_einstellung.xml
+++ b/app/src/main/res/layout/fragment_grund_einstellung.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.nathalieseibert.wells.grund_einstellung">
+    tools:context="at.fhjoanneum.gruppeWells.wells.grund_einstellung">
 
 
     <TextView
