--- a/app/src/main/res/layout/fragment_trinkbrunnen.xml
+++ b/app/src/main/res/layout/fragment_trinkbrunnen.xml
@@ -1,142 +1,129 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="center_horizontal"
     tools:context="at.fhjoanneum.gruppeWells.wells.Trinkbrunnen">
 
-    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="65dp"
+        android:layout_marginBottom="35dp"
+        android:gravity="center"
+        android:text="@string/title_brunnenliste"
+        android:textColor="@color/schwoaz"
+        android:textSize="25sp" />
+
+
+    <TableRow
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:orientation="vertical"
-        tools:ignore="UselessParent">
+        android:layout_margin="20dp">
 
         <TextView
-            android:layout_width="match_parent"
+            android:id="@+id/nameOne"
+            android:layout_width="240dp"
             android:layout_height="wrap_content"
-            android:layout_margin="60dp"
-            android:gravity="center_horizontal"
-            android:text="@string/title_brunnenliste"
-            android:textColor="@color/schwoaz"
-            android:textSize="25sp" />
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
-        <TableLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_gravity="center_horizontal">
+        <TextView
+            android:id="@+id/distanceOne"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/unbekannt"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </TableRow>
 
+    <TableRow
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_margin="20dp">
 
-            <TableRow
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_margin="20dp">
+        <TextView
+            android:id="@+id/nameTwo"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
-                <TextView
-                    android:id="@+id/nameOne"
-                    android:layout_width="240dp"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+        <TextView
+            android:id="@+id/distanceTwo"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/unbekannt"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </TableRow>
 
-                <TextView
-                    android:id="@+id/distanceOne"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/unbekannt"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
-            </TableRow>
+    <TableRow
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_margin="20dp">
 
-            <TableRow
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_margin="20dp">
+        <TextView
+            android:id="@+id/nameThree"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
-                <TextView
-                    android:id="@+id/nameTwo"
-                    android:layout_width="240dp"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+        <TextView
+            android:id="@+id/distanceThree"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/unbekannt"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </TableRow>
 
-                <TextView
-                    android:id="@+id/distanceTwo"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/unbekannt"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
-            </TableRow>
+    <TableRow
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_margin="20dp">
 
-            <TableRow
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_margin="20dp">
+        <TextView
+            android:id="@+id/nameFour"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
-                <TextView
-                    android:id="@+id/nameThree"
-                    android:layout_width="240dp"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
+        <TextView
+            android:id="@+id/distanceFour"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/unbekannt"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </TableRow>
 
-                <TextView
-                    android:id="@+id/distanceThree"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/unbekannt"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
-            </TableRow>
+    <TableRow
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_margin="20dp">
 
-            <TableRow
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_margin="20dp">
+        <TextView
+            android:id="@+id/nameFive"
+            android:layout_width="240dp"
+            android:layout_height="wrap_content"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
 
-                <TextView
-                    android:id="@+id/nameFour"
-                    android:layout_width="240dp"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
-
-                <TextView
-                    android:id="@+id/distanceFour"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/unbekannt"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
-            </TableRow>
-
-            <TableRow
-                android:layout_width="fill_parent"
-                android:layout_height="fill_parent"
-                android:layout_margin="20dp">
-
-                <TextView
-                    android:id="@+id/nameFive"
-                    android:layout_width="240dp"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
-
-                <TextView
-                    android:id="@+id/distanceFive"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/unbekannt"
-                    android:textAppearance="?android:attr/textAppearanceLarge" />
-            </TableRow>
+        <TextView
+            android:id="@+id/distanceFive"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/unbekannt"
+            android:textAppearance="?android:attr/textAppearanceLarge" />
+    </TableRow>
 
 
-            <Button
-                android:id="@+id/buttonkarte"
-                android:layout_width="fill_parent"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_margin="20dp"
-                android:layout_marginBottom="20dp"
-                android:layout_marginEnd="20dp"
-                android:layout_marginLeft="20dp"
-                android:layout_marginRight="20dp"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="20dp"
-                android:text="@string/title_Karte" />
-        </TableLayout>
-
-
-    </LinearLayout>
-</FrameLayout>
+    <Button
+        android:id="@+id/buttonkarte"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_margin="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:text="@string/title_Karte" />
+</TableLayout>
 
